fix gap between sections

--- a/src/styles/components/SectionProjects.scss
+++ b/src/styles/components/SectionProjects.scss
@@ -1,4 +1,5 @@
 .projects {
+	margin-top: -1px;
 	padding-bottom: 256px;
 	background-color: $c-deepOcean;
 
